# xpu-benchmark

./: Benchmarks.odt  README.md
amer/gpu/: American.cu  American_kernel.cuh  BlackScholes_cpu.cpp  CMakeLists.txt  Results.txt
amer/ipu/: American_ipu.cpp  American_vertex.cpp  American_vertex.h  CMakeLists.txt  Results.txt
euro/gpu/: BlackScholes.cu  CMakeLists.txt  README.md  Results.txt
euro/ipu/: BlackScholes_ipu.cpp  BlackScholes_vertex.cpp  BlackScholes_vertex.h  CMakeLists.txt  README.md  Results.txt  count_type.h  docker_setup.txt  number_with_commas.h  vertex_ipu_pi.out
pi/gpu/: CMakeLists.txt  pi.cu  timer.h
pi/ipu/: CMakeLists.txt  pi_vertex.cpp  vertex_ipu_pi.cpp
